--- a/src/lib/models/networks/config/yolov5s.yaml
+++ b/src/lib/models/networks/config/yolov5s.yaml
@@ -22,15 +22,18 @@ backbone:
    [ -1, 1, nn.Upsample, [ None, 2, 'nearest' ] ],
    [ [ -1, 6 ], 1, Concat, [ 1 ] ],   # cat backbone P4
    [ -1, 3, C3, [ 512, False ] ],   # 13
+  #  [-1, 1, CBAM, [512]],
 
    [ -1, 1, Conv, [ 256, 1, 1 ] ],   # 14 upsample /8
    [ -1, 1, nn.Upsample, [ None, 2, 'nearest' ] ],
    [ [ -1, 4 ], 1, Concat, [ 1 ] ],   # cat backbone P3
    [ -1, 3, C3, [ 256, False ] ],   # 17
+  #  [-1, 1, CBAM, [256]],
 
    [ -1, 1, Conv, [ 128, 1, 1 ] ],  # 18 upsample /4
    [ -1, 1, nn.Upsample, [ None, 2, 'nearest' ] ],
    [ [ -1, 2 ], 1, Concat, [ 1 ] ],    # cat backbone P2
-   [ -1, 3, C3, [ 128, False ] ]  # 21
+   [ -1, 3, C3, [ 128, False ] ],  # 21
+  #  [-1, 1, CBAM, [128]],
   ]
 
